<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<ImageView-->
                <!--android:id="@+id/imageView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="30dp"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--app:srcCompat="@drawable/nu_logo"-->
                <!--android:contentDescription="@string/nu_logo" />-->
            <!--android:layout_below="@id/imageView"-->

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="70dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/User_Name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/TextView"
                android:layout_marginEnd="30dp"
                android:layout_below="@+id/TextView"
                android:hint="@string/user_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/TextView"
                android:layout_below="@+id/TextView"
                android:layout_marginTop="60dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/Email_ID"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/TextView2"
                android:layout_alignEnd="@+id/User_Name"
                android:layout_below="@+id/TextView2"
                android:hint="@string/xyz_st_niituniversity_in"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/TextView2"
                android:layout_below="@+id/TextView2"
                android:layout_marginTop="60dp"
                android:text="@string/enrollment_number"
                android:textColor="#000000"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/Enrollment_Number"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/TextView3"
                android:layout_alignEnd="@+id/User_Name"
                android:layout_below="@+id/TextView3"
                android:hint="@string/u101116fcs155" />
            <TextView
                android:id="@+id/TextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/TextView3"
                android:layout_below="@+id/TextView3"
                android:layout_marginTop="60dp"
                android:text="@string/batch"
                android:textColor="#000000"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/Batch"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/TextView4"
                android:layout_alignEnd="@+id/User_Name"
                android:layout_below="@+id/TextView4"
                android:hint="@string/_2016"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/TextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/TextView4"
                android:layout_below="@+id/TextView4"
                android:layout_marginTop="60dp"
                android:text="@string/section"
                android:textColor="#000000"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/Section"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/TextView5"
                android:layout_alignEnd="@+id/User_Name"
                android:layout_below="@+id/TextView5"
                android:hint="@string/s5"
                android:inputType="textCapSentences" />
            <TextView
                android:id="@+id/TextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/TextView5"
                android:layout_below="@+id/TextView5"
                android:layout_marginTop="60dp"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/TextView6"
                android:layout_alignEnd="@+id/User_Name"
                android:layout_below="@+id/TextView6"
                android:hint="@string/phoneNoHint"
                android:inputType="phone" />
            <TextView
                android:id="@+id/TextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/TextView6"
                android:layout_below="@+id/TextView6"
                android:layout_marginTop="60dp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/TextView7"
                android:layout_alignEnd="@+id/User_Name"
                android:layout_below="@+id/TextView7"
                android:hint="@string/passwordhint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/TextView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/TextView7"
                android:layout_below="@+id/TextView7"
                android:layout_marginTop="60dp"
                android:text="@string/confirm_password"
                android:textColor="#000000"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/Confirm_Password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/TextView8"
                android:layout_alignEnd="@+id/User_Name"
                android:layout_below="@+id/TextView8"
                android:hint="@string/passwordhint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/Register_Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/Confirm_Password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@color/colorAccent"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:onClick="RegisterButton"/>

            <TextView
                android:id="@+id/Login_Link"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_below="@+id/Register_Button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="13dp"
                android:text="@string/i_have_an_account_login"
                android:textAllCaps="false"
                android:textColor="#006ac6"
                android:textSize="12sp"
                android:onClick="LoginAct"/>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>